--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	<a name="top"></a>
 	<header>
 
-		<p>Last edited: July 05 2020 06:05pm</p>
+		<p>Last edited: oct 1 2020 02:00 am</p>
 
 		<!--My Name-->
 		<h1>Muhammad Arab</h1>
